--- a/MemeWars/battle.html
+++ b/MemeWars/battle.html
@@ -29,9 +29,18 @@
         <div class="turn-menu" id="turn-menu1">
           <div class="menu-row" id="menu-move"></div>
           <div class="menu-row" id="menu-move2"></div>
-          <div class="menu-row" id="menu-item">2 Like: Item Equip</div>
-          <div class="menu-row" id="menu-1support">1 Like: Support Summon</div>
-          <div class="menu-row" id="menu-3support">3 Like: Support Summon</div>
+          <div class="menu-row" id="menu-item">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x2: Item Equip
+          </div>
+          <div class="menu-row" id="menu-1support">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x1: Support Summon
+          </div>
+          <div class="menu-row" id="menu-3support">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x3: Support Summon
+          </div>
           <div class="menu-row" id="menu-end">End Turn</div>
         </div>
         <div id="card-cont">
@@ -75,14 +84,14 @@
             <div class="hero-energy" id="hero-energy"><span>Likes:</span></div>
           </div>
         </div>
-        <div class="card" id="item-card">
+        <div class="item card" id="item-card">
           <div class="card-name" id="item-name"></div>
           <div id="img-cont">
             <img class="item-img" id="item-img" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="item-effect"></div>
         </div>
-        <div class="card" id="support-card">
+        <div class="support card" id="support-card">
           <div class="card-name" id="support-name"></div>
           <div class="move-dmg" id="support-dmg"></div>
           <div id="img-cont">
@@ -94,7 +103,7 @@
             <div class="support-hp"id="support-hp"></div>
           </div>
         </div>
-        <div class="card" id="support2-card">
+        <div class="support card" id="support2-card">
           <div class="card-name" id="support2-name"></div>
           <div class="move-dmg" id="support2-dmg"></div>
           <div id="img-cont">
@@ -115,9 +124,18 @@
         <div class="turn-menu" id="turn-menu2">
           <div class="menu-row" id="menu2-move"></div>
           <div class="menu-row" id="menu2-move2"></div>
-          <div class="menu-row" id="menu2-item">2 Like: Item Equip</div>
-          <div class="menu-row" id="menu2-1support">1 Like: Support Summon</div>
-          <div class="menu-row" id="menu2-3support">3 Like: Support Summon</div>
+          <div class="menu-row" id="menu2-item">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x2: Item Equip
+          </div>
+          <div class="menu-row" id="menu2-1support">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x1: Support Summon
+          </div>
+          <div class="menu-row" id="menu2-3support">
+            <img src='/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/like.gif'/>
+            x3: Support Summon
+          </div>
           <div class="menu-row" id="menu2-end">End Turn</div>
         </div>
         <div class="likes">
@@ -155,14 +173,14 @@
             </div>
           </div>
         </div>
-        <div class="card" id="item-card2">
+        <div class="item card" id="item-card2">
           <div class="card-name" id="item-name2"></div>
           <div id="img-cont">
             <img class="item-img" id="item-img2" src="/Users/adrianpardo/Documents/cs50xmiami/MemeWars/img/extras/questionMark.png">
           </div>
           <div class="card-effect" id="item-effect2"></div>
         </div>
-        <div class="card" id="support-card2">
+        <div class="support card" id="support-card2">
           <div class="card-name" id="support-name2"></div>
           <div class="move-dmg" id="support-dmg2"></div>
           <div id="img-cont">
@@ -174,7 +192,7 @@
             <div class="support-hp" id="support-hp2"></div>
           </div>
         </div>
-        <div class="card" id="support2-card2">
+        <div class="support card" id="support2-card2">
           <div class="card-name" id="support2-name2"></div>
           <div class="move-dmg" id="support2-dmg2"></div>
           <div id="img-cont">
